--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     justify-self: center;
     grid-row-start: 1;
     font-weight: bold;
-    color: orange;
+    color: #ea580c;
   }
   
   .display,
@@ -32,7 +32,7 @@
     height: 100px;
     padding: 25px;
     background-color: lightgray;
-    color: blue;
+    color: #0f766e;
     text-align: center;
     display: grid;
     align-items: center;
@@ -48,7 +48,7 @@
     width: 200px;
     height: 75px;
     border: none;
-    background-color: blue;
+    background-color: #0f766e;
     color: white;
     font-size: 20px;
     padding: 10px;
